--- a/notes/personal/content-consumption-queue/index.html
+++ b/notes/personal/content-consumption-queue/index.html
@@ -660,6 +660,12 @@ void function() {
 </thead>
 <tbody>
 <tr>
+<td align="center">The Aleph (1945)</td>
+<td align="center">Jorge Luis Borges</td>
+<td align="center">2023-01-30</td>
+<td align="center">2023-01-30</td>
+</tr>
+<tr>
 <td align="center">The Sirens of Titan (1959)</td>
 <td align="center">Kurt Vonnegut Jr.</td>
 <td align="center">2022-12-26</td>
@@ -714,7 +720,7 @@ void function() {
 <td align="center">2022-08-15</td>
 </tr>
 <tr>
-<td align="center">Cat’s Cradle (1963)</td>
+<td align="center"><a class="internal new" href="/notes/books/novels/1950-1999/vonnegut-kurt-cats-cradle">Cat's Cradle (1963)</a></td>
 <td align="center">Kurt Vonnegut Jr.</td>
 <td align="center">2022-07-27</td>
 <td align="center">2022-07-30</td>
